# ci-benchmarking

./: pyproject.poetry.toml  pyproject.toml  pyproject.uv.toml
.github/workflows/: ci.yml
benchmark/: main.py
tests/: test_main.py
